--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
 
             <label for="isbn" class="mb-2 mt-3">ISBN#</label>
             <input type="number" name="title" id="isbn" class="form-control">
-            <input type="submit" name="title" id="form-label" class="form-control bg-primary text-white mt-3">
+            <input type="submit" name="title" id="submit" class="form-control bg-primary text-white mt-3">
       </div>
       
       <div class="container">
             <table class="table table-striped table-hover">
                         <thead>
                           <tr>
-                            <th scope="col">#</th>
                             <th scope="col">First</th>
                             <th scope="col">Last</th>
                             <th scope="col">Handle</th>
@@ -48,8 +47,7 @@
 
 
 
-
-      <script src="bootstrap/bootstrap.min.js"></script>
       <script src="book.js"></script>
+      
 </body>
 </html>
