--- a/index.html
+++ b/index.html
@@ -16,25 +16,27 @@
       </div>
 
       <div class="container mb-5">
+           <form >
+                  <label for="title" class="mb-2 mt-3">Title</label>
+                  <input type="text" name="title" id="title" class="form-control">
+
+                  <label for="author" class="mb-2 mt-3">Author</label>
+                  <input type="text" name="title" id="author" class="form-control">
+
+                  <label for="isbn" class="mb-2 mt-3">ISBN#</label>
+                  <input type="number" name="title" id="isbn" class="form-control">
+                  <input type="submit" name="title" value="Add Book" id="submit" class="form-control bg-primary text-white mt-3">
+           </form>
            
-            <label for="title" class="mb-2 mt-3">Title</label>
-            <input type="text" name="title" id="title" class="form-control">
-
-            <label for="author" class="mb-2 mt-3">Author</label>
-            <input type="text" name="title" id="author" class="form-control">
-
-            <label for="isbn" class="mb-2 mt-3">ISBN#</label>
-            <input type="number" name="title" id="isbn" class="form-control">
-            <input type="submit" name="title" id="submit" class="form-control bg-primary text-white mt-3">
       </div>
       
       <div class="container">
             <table class="table table-striped table-hover">
                         <thead>
                           <tr>
-                            <th scope="col">First</th>
-                            <th scope="col">Last</th>
-                            <th scope="col">Handle</th>
+                            <th scope="col">Title</th>
+                            <th scope="col">Author</th>
+                            <th scope="col">#ISBN</th>
                           </tr>
                         </thead>
                         <tbody>
